Add item removal feature to the shopping cart
Implemented a "Remove" link in the cart detail template that allows users to remove items from their cart. Added a corresponding URL route and updated the view to handle item removal, including a success message upon removal.

--- a/cart/templates/cart/cart_detail.html
+++ b/cart/templates/cart/cart_detail.html
@@ -17,6 +17,7 @@
                 <td>{{ item.product.name }}</td>
                 <td>{{ item.quantity }}</td>
                 <td>${{ item.subtotal }}</td>
+                <td><a href="{% url 'remove_from_cart' item.product.id %}">Remove</a></td>
             </tr>
             {% endfor %}
         </table>
