--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>E-commerce Site</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 <body>
     <header>
@@ -16,7 +18,18 @@
             {% endif %}
         </nav>
     </header>
-    {% block content %}
-    {% endblock %}
+
+    {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+
+    <div class="content">
+        {% block content %}
+        {% endblock %}
+    </div>
 </body>
 </html>
