--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,5 +1,9 @@
+/* styles.css */
+
 body {
     font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
 header {
@@ -10,6 +14,7 @@ header {
 
 header h1 {
     display: inline-block;
+    margin: 0;
 }
 
 nav {
@@ -23,9 +28,14 @@ nav a {
     text-decoration: none;
 }
 
+nav a:hover {
+    text-decoration: underline;
+}
+
 .messages {
     list-style-type: none;
-    padding: 0;
+    margin: 0;
+    padding: 10px;
 }
 
 .messages li {
@@ -47,6 +57,10 @@ nav a {
     padding: 20px;
 }
 
+h1, h2, h3 {
+    color: #333;
+}
+
 table {
     width: 100%;
     border-collapse: collapse;
@@ -62,6 +76,18 @@ th, td {
     text-align: left;
 }
 
+button {
+    padding: 5px 10px;
+}
+
 form {
-    display: inline;
+    margin: 0;
+}
+
+a {
+    color: #007bff;
+}
+
+a:hover {
+    text-decoration: underline;
 }
