--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     <header>
         <h1>E-commerce Site</h1>
         <nav>
-            <a href="/">Home</a>
+            <a href="{% url 'home' %}">Home</a>
             <a href="{% url 'cart_detail' %}">Cart</a>
             {% if user.is_authenticated %}
                 <a href="{% url 'logout' %}">Logout</a>
