--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
         <nav>
             <a href="{% url 'home' %}">Home</a>
             <a href="{% url 'cart_detail' %}">Cart</a>
+            <a href="{% url 'order_history' %}">Orders</a>
             {% if user.is_authenticated %}
                 <a href="{% url 'logout' %}">Logout</a>
             {% else %}
